examples/error/hierachical_modelling/ppError/error-GCC.errorOutput
submodel/Untergruppe.xml:11: QName attribute value defined by '[uri]localname' syntax but no ] found.
Hauptgruppe.xml:38: [ecount=1] included from here
MBS.mbsim.xml:18: [ecount=1] included from here
MBS.mbsx:8: [ecount=1] included from here
